# analysts-alpha-ml-signals

./: .gitignore  README.md  main.py  pyproject.toml
configs/: config_get_data_first_time.py  ml_config.json  run_config.json
scripts/: clean_data.py  data_wrds.py  example_create_features.py  get_data_first_time.py  get_ml_results.py  tmp.py
src/alpha_in_analysts/: backtester.py  book_engine.py  features_engine.py  orchestrator.py
src/alpha_in_analysts/backtester/: portfolio.py
src/alpha_in_analysts/model_wrappers/: __init__.py  elastic_net_wrapper.py  model_wrapper.py
src/alpha_in_analysts/utils/: config.py  helpers.py  mapping.py  s3_utils.py
src/analysts_ml_signals/models/: model_wrapper.py  rf_wrapper.py
