[project]
name = "alpha_in_analysts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thibault Charbonnier", email = "thibault.charbonnier@edu.devinci.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.19",
    "dotenv>=0.9.9",
    "fsspec>=2021.7.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "s3fs>=0.4.2",
    "skops>=0.13.0",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
